interface terminé, fonctions du modelview manquantes

--- a/EasySaveConsole/Properties/Resources.resx
+++ b/EasySaveConsole/Properties/Resources.resx
@@ -126,6 +126,12 @@
   <data name="change_lang_fr" xml:space="preserve">
     <value>Français </value>
   </data>
+  <data name="confirm_delete" xml:space="preserve">
+    <value>Are you sure you want to delete it?</value>
+  </data>
+  <data name="confirm_execute_saving_job" xml:space="preserve">
+    <value>Are you sure you want to execute all backup?</value>
+  </data>
   <data name="create_saving_job" xml:space="preserve">
     <value>Create a saving job</value>
   </data>
@@ -144,19 +150,40 @@
   <data name="enter_source_path" xml:space="preserve">
     <value>Enter the path of the source file:</value>
   </data>
+  <data name="execute_all_saving_job" xml:space="preserve">
+    <value>Execute all saving job</value>
+  </data>
+  <data name="execute_one_saving_job" xml:space="preserve">
+    <value>Execute only one saving job</value>
+  </data>
   <data name="execute_saving_job" xml:space="preserve">
     <value>Execute a saving job</value>
+  </data>
+  <data name="impossible_create_saving_job" xml:space="preserve">
+    <value>You already have 5 existing saving jobs, you can not add more</value>
   </data>
   <data name="leave_current_menu" xml:space="preserve">
     <value>Leave </value>
   </data>
+  <data name="no" xml:space="preserve">
+    <value>no</value>
+  </data>
   <data name="show_info" xml:space="preserve">
-    <value>Show the informations about the saving job</value>
+    <value>Logbook</value>
+  </data>
+  <data name="show_log" xml:space="preserve">
+    <value>Show logs</value>
+  </data>
+  <data name="show_state" xml:space="preserve">
+    <value>Show backup status</value>
   </data>
   <data name="title_main_menu" xml:space="preserve">
     <value>Main Menu</value>
   </data>
   <data name="user_input_error" xml:space="preserve">
     <value>Error : invalid input</value>
+  </data>
+  <data name="yes" xml:space="preserve">
+    <value>yes</value>
   </data>
 </root>
