--- a/EasySaveConsole/Properties/Resources.FR.resx
+++ b/EasySaveConsole/Properties/Resources.FR.resx
@@ -117,17 +117,23 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="change_lang" xml:space="preserve">
+    <value>Changer la langue</value>
+  </data>
   <data name="change_lang_en" xml:space="preserve">
     <value>English</value>
   </data>
   <data name="change_lang_fr" xml:space="preserve">
     <value>Français</value>
   </data>
+  <data name="confirm_delete" xml:space="preserve">
+    <value>Etes vous sur de vouloir le supprimer ? </value>
+  </data>
+  <data name="confirm_execute_all_saving_job" xml:space="preserve">
+    <value>Etes vous sur de vouloir executer toutes les sauvegardes ?</value>
+  </data>
   <data name="create_saving_job" xml:space="preserve">
     <value>Créer un travail de sauvegarde</value>
-  </data>
-  <data name="current_lang" xml:space="preserve">
-    <value>Changer la langue</value>
   </data>
   <data name="delete_saving_job" xml:space="preserve">
     <value>Supprimer un travail de sauvegarde</value>
@@ -139,24 +145,45 @@
     <value>Entrer un nom pour le tavail de sauvegarde :</value>
   </data>
   <data name="enter_job_type" xml:space="preserve">
-    <value>Choisissez le type de sauvegarde :</value>
+    <value>Choisissez le type de sauvegarde (c|d):</value>
   </data>
   <data name="enter_source_path" xml:space="preserve">
     <value>Entrer le chemin du fichier source :</value>
   </data>
+  <data name="execute_all_saving_job" xml:space="preserve">
+    <value>Executer tous les travaux de sauvegarde</value>
+  </data>
+  <data name="execute_one_saving_job" xml:space="preserve">
+    <value>Executer un seul travail de sauvegarde</value>
+  </data>
   <data name="execute_saving_job" xml:space="preserve">
     <value>Executer un travail de sauvegarde</value>
+  </data>
+  <data name="impossible_create_saving_job" xml:space="preserve">
+    <value>Vous avez deja 5 travaux de sauvegarde existant, vous ne pouvez en ajouter</value>
   </data>
   <data name="leave_current_menu" xml:space="preserve">
     <value>Quitter</value>
   </data>
+  <data name="no" xml:space="preserve">
+    <value>non</value>
+  </data>
   <data name="show_info" xml:space="preserve">
-    <value>Afficher les informations sur les travaux de sauvegarde</value>
+    <value>Journal de bord</value>
+  </data>
+  <data name="show_log" xml:space="preserve">
+    <value>Afficher les logs</value>
+  </data>
+  <data name="show_state" xml:space="preserve">
+    <value>Afficher l'état des sauvegardes</value>
   </data>
   <data name="title_main_menu" xml:space="preserve">
     <value>Menu Principal</value>
   </data>
   <data name="user_input_error" xml:space="preserve">
     <value>Erreur : saisi invalide</value>
+  </data>
+  <data name="yes" xml:space="preserve">
+    <value>oui</value>
   </data>
 </root>
