--- a/EasySaveConsole/Properties/Resources.resx
+++ b/EasySaveConsole/Properties/Resources.resx
@@ -192,4 +192,9 @@
   <data name="file_transfered" xml:space="preserve">
     <value>File transfered : </value>
   </data>
+  <data name="perm_error" xml:space="preserve">
+    <value>Permsission Error
+
+</value>
+  </data>
 </root>
