--- a/EasySaveConsole/Properties/Resources.resx
+++ b/EasySaveConsole/Properties/Resources.resx
@@ -171,17 +171,17 @@
   <data name="no" xml:space="preserve">
     <value>no</value>
   </data>
-  <data name="show_info" xml:space="preserve">
-    <value>Logbook</value>
+  <data name="change_log_format" xml:space="preserve">
+    <value>change the log files format</value>
   </data>
-  <data name="show_job" xml:space="preserve">
-    <value>Show saving jobs</value>
+  <data name="json_log_format" xml:space="preserve">
+    <value>log files in .json</value>
   </data>
-  <data name="show_log" xml:space="preserve">
-    <value>Show logs</value>
+  <data name="xml_log_format" xml:space="preserve">
+    <value>log files in .xml</value>
   </data>
-  <data name="show_state" xml:space="preserve">
-    <value>Show backup status</value>
+  <data name="show_saving_jobs" xml:space="preserve">
+    <value>Show the saving jobs</value>
   </data>
   <data name="title_main_menu" xml:space="preserve">
     <value>Main Menu</value>
@@ -202,5 +202,8 @@
     <value>Permsission Error
 
 </value>
+  </data>
+  <data name="log_file_path" xml:space="preserve">
+    <value>The log file was created in </value>
   </data>
 </root>
