--- a/EasySaveConsole/Properties/Resources.FR.resx
+++ b/EasySaveConsole/Properties/Resources.FR.resx
@@ -210,4 +210,22 @@
   <data name="no_saving_job" xml:space="preserve">
     <value>il n'y a pas de travaux de sauvegarde</value>
   </data>
+  <data name="blocking_software" xml:space="preserve">
+    <value>Applications bloquante</value>
+  </data>
+  <data name="browse" xml:space="preserve">
+    <value>Parcourir</value>
+  </data>
+  <data name="choose_the_logs_files_format" xml:space="preserve">
+    <value>Choisissez le format des fichier logs</value>
+  </data>
+  <data name="cryptosoft_path" xml:space="preserve">
+    <value>Chemin de CryptoSoft</value>
+  </data>
+  <data name="logs_files_format" xml:space="preserve">
+    <value>Format des fichiers logs</value>
+  </data>
+  <data name="settings" xml:space="preserve">
+    <value>Pamamètres</value>
+  </data>
 </root>
