--- a/EasySaveConsole/Properties/Resources.FR.resx
+++ b/EasySaveConsole/Properties/Resources.FR.resx
@@ -148,7 +148,7 @@
     <value>Entrer un nom pour le tavail de sauvegarde :</value>
   </data>
   <data name="enter_job_type" xml:space="preserve">
-    <value>Choisissez le type de sauvegarde (c|d):</value>
+    <value>Choisissez le type de sauvegarde :</value>
   </data>
   <data name="enter_source_path" xml:space="preserve">
     <value>Entrer le chemin du fichier source :</value>
@@ -203,5 +203,35 @@
   </data>
   <data name="perm_error" xml:space="preserve">
     <value>Erreur de permissions</value>
+  </data>
+  <data name="browse" xml:space="preserve">
+    <value>Parcourir</value>
+  </data>
+  <data name="complete" xml:space="preserve">
+    <value>Complette</value>
+  </data>
+  <data name="create" xml:space="preserve">
+    <value>Créer</value>
+  </data>
+  <data name="decrypt" xml:space="preserve">
+    <value>Décrypter</value>
+  </data>
+  <data name="delete" xml:space="preserve">
+    <value>Supprimer</value>
+  </data>
+  <data name="diferential" xml:space="preserve">
+    <value>Différentielle</value>
+  </data>
+  <data name="logs" xml:space="preserve">
+    <value>Logs</value>
+  </data>
+  <data name="select_all" xml:space="preserve">
+    <value>Tout sélectionner</value>
+  </data>
+  <data name="settings" xml:space="preserve">
+    <value>Paramètres</value>
+  </data>
+  <data name="start" xml:space="preserve">
+    <value>Démarrer</value>
   </data>
 </root>
