--- a/EasySaveConsole/Properties/Resources.resx
+++ b/EasySaveConsole/Properties/Resources.resx
@@ -203,4 +203,34 @@
 
 </value>
   </data>
+  <data name="browse" xml:space="preserve">
+    <value>Browse</value>
+  </data>
+  <data name="complete" xml:space="preserve">
+    <value>Complete</value>
+  </data>
+  <data name="create" xml:space="preserve">
+    <value>Create</value>
+  </data>
+  <data name="decrypt" xml:space="preserve">
+    <value>Decrypt</value>
+  </data>
+  <data name="delete" xml:space="preserve">
+    <value>Delete</value>
+  </data>
+  <data name="diferential" xml:space="preserve">
+    <value>diferential</value>
+  </data>
+  <data name="logs" xml:space="preserve">
+    <value>Logs</value>
+  </data>
+  <data name="select_all" xml:space="preserve">
+    <value>Select All </value>
+  </data>
+  <data name="settings" xml:space="preserve">
+    <value>Settings</value>
+  </data>
+  <data name="start" xml:space="preserve">
+    <value>Start</value>
+  </data>
 </root>
