--- a/EasySaveConsole/Properties/Resources.FR.resx
+++ b/EasySaveConsole/Properties/Resources.FR.resx
@@ -234,4 +234,10 @@
   <data name="start" xml:space="preserve">
     <value>Démarrer</value>
   </data>
+  <data name="cryptosoft_choice" xml:space="preserve">
+    <value>Utiliser CryptoSoft ?</value>
+  </data>
+  <data name="password_placeholder" xml:space="preserve">
+    <value>Entrer le mot de passe CryptoSoft</value>
+  </data>
 </root>
