Play, Pause, Stop : - Ajout des boutons Pause et Stop dans le MainMenu - Ajout de la propriété  'int volatile state' dans la Class Job pour mesurer l'état du job (0 = STOP/END/TO DO , 1 = ACTIVE , 2 = PAUSE ) - Ajout d'une méthode pour arréter ou mettre en pause un job en vérifiant Job.state - Amélioration des méthodes copyFilesPartialSave et copyFilesEntireSave

--- a/EasySaveConsole/Properties/Resources.resx
+++ b/EasySaveConsole/Properties/Resources.resx
@@ -260,4 +260,10 @@
   <data name="logs_files_format" xml:space="preserve">
     <value>Logs files format</value>
   </data>
+  <data name="pause" xml:space="preserve">
+    <value>Pause</value>
+  </data>
+  <data name="stop" xml:space="preserve">
+    <value>Stop</value>
+  </data>
 </root>
