--- a/EasySaveConsole/Properties/Resources.FR.resx
+++ b/EasySaveConsole/Properties/Resources.FR.resx
@@ -261,4 +261,10 @@
   <data name="logs_files_format" xml:space="preserve">
     <value>Format des fichier logs</value>
   </data>
+  <data name="pause" xml:space="preserve">
+    <value>Pause</value>
+  </data>
+  <data name="stop" xml:space="preserve">
+    <value>Stop</value>
+  </data>
 </root>
